Fix the limit of age

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form id="form">
     <p>If you want to see my web page you most be over 18 years!!!</p>
     <p>Put the year of your birth</p>
-    <input id="myInput" type="number" required/>
+    <input id="myInput" type="number" min="1" max="2100" required/>
     <button id="myButton" value="submit">Go</button>
     </form>
     <script src="app.js"></script>
