--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <form id="form">
     <p>If you want to see my web page you most be over 18 years!!!</p>
     <p>Put the year of your birth</p>
-    <input id="myInput" type="number" min="1" max="2100" required/>
+    <input id="myInput" type="text" maxlength="4" required pattern="[0-9]{4}" title="4 digit number: e.g. 1234" required/>
     <button id="myButton" value="submit">Go</button>
     </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
