add folders and correct links

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Check The Age</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <form id="form">
     <p>If you want to see my web page you most be over 18 years!!!</p>
     <p>Put the year of your birth</p>
-    <input id="myInput" type="text" maxlength="4" required pattern="[0-9]{4}" title="4 digit number: e.g. 1234" required/>
+    <input id="myInput" type="number" required/>
     <button id="myButton" value="submit">Go</button>
     </form>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
