--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Check The Age</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <form id="form">
@@ -14,6 +14,6 @@
     <input id="myInput" type="number" required/>
     <button id="myButton" value="submit">Go</button>
     </form>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
